# mechela

./: .gitignore  CLAUDE.md  Narrative_Evidence_Index_MVP_SPEC.md  Narrative_Evidence_Index_MVP_Technical_Guide.md  README.md  mechela使用說明_正體中文.md  setup_local_ai.bat  setup_local_ai.sh  start.bat
backend/: diagnose_llm.py  generate_test_data.py  pyproject.toml  test_model_quality.py
backend/app/: main.py
backend/app/api/: dashboard.py  projects.py  reports.py  settings.py  signals.py  threads.py
backend/app/core/: config.py  database.py  settings_store.py
backend/app/models/: project.py  report.py  signal.py  thread.py
backend/app/schemas/: project.py  report.py  settings.py  signal.py  thread.py
backend/app/services/: detector.py  llm_client.py  matcher.py  parser.py
demo/: CDRI_Q3_2024_Progress_Report.docx  demo_final_report_en.docx  demo_quarterly_report_en.docx  demo_quarterly_report_q2.docx  generate_demo.py
demo/MEL test report/: demo data.md
docs/: local-ai-evaluation.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/projects/[id]/review/[reportId]/: page.tsx
frontend/app/projects/[id]/upload/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ExportModal.tsx  Icon.tsx  LevelBadge.tsx  Shell.tsx  StatusBadge.tsx  Toast.tsx
frontend/lib/: api.ts  i18n.tsx  types.ts
